--- a/login.html
+++ b/login.html
@@ -4,144 +4,115 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登录 - Otherwise</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-gray-50 min-h-screen flex flex-col justify-center">
-    <div class="sm:mx-auto sm:w-full sm:max-w-md">
-        <div class="text-center">
-            <h1 class="text-3xl font-bold text-gray-900">Otherwise</h1>
-            <span class="text-sm text-gray-500">否则</span>
+<body style="min-height: 100vh; display: flex; align-items: center; justify-content: center; background-color: var(--color-background-secondary);">
+    <div style="width: 100%; max-width: 400px; padding: 0 var(--spacing-lg);">
+        <!-- Logo and Title -->
+        <div class="text-center" style="margin-bottom: 3rem;">
+            <h1 style="font-size: 2rem; font-weight: 700; margin-bottom: 0.5rem;">Otherwise</h1>
+            <p style="color: var(--color-text-secondary); font-size: 0.875rem;">否则</p>
         </div>
-        <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
-            欢迎回来
-        </h2>
-        <p class="mt-2 text-center text-sm text-gray-600">
-            还没有账户？
-            <a href="register.html" class="font-medium text-black hover:text-gray-700">
-                立即注册
-            </a>
-        </p>
-    </div>
 
-    <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
-        <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
-            <form class="space-y-6" id="loginForm" novalidate>
+        <!-- Login Form -->
+        <div class="card" style="padding: 2.5rem;">
+            <div class="text-center" style="margin-bottom: 2rem;">
+                <h2 style="font-size: 1.5rem; margin-bottom: 0.5rem;">欢迎回来</h2>
+                <p style="color: var(--color-text-secondary); font-size: 0.875rem;">
+                    还没有账户？
+                    <a href="register.html" style="color: var(--color-text-primary); font-weight: 500;">立即注册</a>
+                </p>
+            </div>
+
+            <form id="loginForm" novalidate>
                 <!-- 用户名或邮箱输入 -->
-                <div>
-                    <label for="loginIdentifier" class="block text-sm font-medium text-gray-700">
-                        用户名或邮箱
-                    </label>
-                    <div class="mt-1">
-                        <input id="loginIdentifier" name="loginIdentifier" type="text" required 
-                               class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:ring-black focus:border-black sm:text-sm"
-                               placeholder="请输入用户名或邮箱">
-                        <p class="mt-1 text-sm text-red-600 hidden" id="loginIdentifierError"></p>
-                    </div>
+                <div class="form-group">
+                    <label for="loginIdentifier" class="form-label">用户名或邮箱</label>
+                    <input id="loginIdentifier" name="loginIdentifier" type="text" required 
+                           class="form-input" placeholder="请输入用户名或邮箱">
+                    <p class="message-error" id="loginIdentifierError" style="display: none; margin-top: 0.5rem; font-size: 0.75rem;"></p>
                 </div>
 
                 <!-- 密码输入 -->
-                <div>
-                    <label for="password" class="block text-sm font-medium text-gray-700">
-                        密码
-                    </label>
-                    <div class="mt-1 relative">
+                <div class="form-group">
+                    <label for="password" class="form-label">密码</label>
+                    <div style="position: relative;">
                         <input id="password" name="password" type="password" required 
-                               class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:ring-black focus:border-black sm:text-sm pr-10"
-                               placeholder="请输入密码">
-                        <button type="button" id="togglePassword" class="absolute inset-y-0 right-0 pr-3 flex items-center">
-                            <span class="text-gray-400 hover:text-gray-600">👁️</span>
+                               class="form-input" placeholder="请输入密码" style="padding-right: 3rem;">
+                        <button type="button" id="togglePassword" 
+                                style="position: absolute; right: 0.75rem; top: 50%; transform: translateY(-50%); background: none; border: none; color: var(--color-text-muted); cursor: pointer;">
+                            👁️
                         </button>
-                        <p class="mt-1 text-sm text-red-600 hidden" id="passwordError"></p>
                     </div>
+                    <p class="message-error" id="passwordError" style="display: none; margin-top: 0.5rem; font-size: 0.75rem;"></p>
                 </div>
 
                 <!-- 记住我和忘记密码 -->
-                <div class="flex items-center justify-between">
-                    <div class="flex items-center">
+                <div class="flex justify-between items-center" style="margin-bottom: 2rem;">
+                    <label class="flex items-center" style="cursor: pointer;">
                         <input id="rememberMe" name="rememberMe" type="checkbox" 
-                               class="h-4 w-4 text-black focus:ring-black border-gray-300 rounded">
-                        <label for="rememberMe" class="ml-2 block text-sm text-gray-900">
-                            记住我
-                        </label>
-                    </div>
-
-                    <div class="text-sm">
-                        <a href="#" onclick="showForgotPasswordModal()" class="font-medium text-black hover:text-gray-700">
-                            忘记密码？
-                        </a>
-                    </div>
+                               style="margin-right: 0.5rem; accent-color: var(--color-primary);">
+                        <span style="font-size: 0.875rem;">记住我</span>
+                    </label>
+                    <a href="#" onclick="showForgotPasswordModal()" 
+                       style="font-size: 0.875rem; color: var(--color-text-primary); font-weight: 500;">
+                        忘记密码？
+                    </a>
                 </div>
 
                 <!-- 登录按钮 -->
-                <div>
-                    <button type="submit" id="submitButton"
-                            class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-black hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-black disabled:bg-gray-400 disabled:cursor-not-allowed">
-                        <span id="submitText">登录</span>
-                        <span id="submitLoading" class="hidden">
-                            <svg class="animate-spin -ml-1 mr-2 h-4 w-4 text-white inline" fill="none" viewBox="0 0 24 24">
-                                <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-                                <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
-                            </svg>
-                            登录中...
-                        </span>
-                    </button>
-                </div>
+                <button type="submit" id="submitButton" class="btn btn-primary" 
+                        style="width: 100%; margin-bottom: 1.5rem;">
+                    <span id="submitText">登录</span>
+                    <span id="submitLoading" style="display: none;">
+                        <span class="loading" style="display: inline-block; width: 16px; height: 16px; margin-right: 0.5rem;"></span>
+                        登录中...
+                    </span>
+                </button>
 
                 <!-- 错误提示区域 -->
-                <div id="loginErrorAlert" class="hidden rounded-md bg-red-50 p-4">
-                    <div class="flex">
-                        <div class="ml-3">
-                            <h3 class="text-sm font-medium text-red-800">登录失败</h3>
-                            <div class="mt-2 text-sm text-red-700">
-                                <p id="loginErrorMessage">用户名或密码错误，请重试</p>
-                            </div>
-                        </div>
-                    </div>
+                <div id="loginErrorAlert" class="message message-error" style="display: none;">
+                    <h3 style="font-size: 0.875rem; font-weight: 600; margin-bottom: 0.25rem;">登录失败</h3>
+                    <p id="loginErrorMessage" style="font-size: 0.875rem; margin: 0;">用户名或密码错误，请重试</p>
                 </div>
             </form>
 
-            <div class="mt-6">
-                <div class="relative">
-                    <div class="absolute inset-0 flex items-center">
-                        <div class="w-full border-t border-gray-300" />
-                    </div>
-                    <div class="relative flex justify-center text-sm">
-                        <span class="px-2 bg-white text-gray-500">或者</span>
-                    </div>
+            <!-- 分隔线 -->
+            <div style="position: relative; margin: 2rem 0;">
+                <div style="position: absolute; inset: 0; display: flex; align-items: center;">
+                    <div style="width: 100%; height: 1px; background-color: var(--color-border);"></div>
                 </div>
+                <div style="position: relative; display: flex; justify-content: center;">
+                    <span style="background-color: var(--color-background); padding: 0 1rem; color: var(--color-text-muted); font-size: 0.875rem;">或者</span>
+                </div>
+            </div>
 
-                <div class="mt-6 grid grid-cols-2 gap-3">
-                    <a href="register.html" class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
-                        注册新账户
-                    </a>
-                    <a href="index.html" class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
-                        返回首页
-                    </a>
-                </div>
+            <!-- 底部链接 -->
+            <div class="grid grid-cols-2" style="gap: 0.75rem;">
+                <a href="register.html" class="btn btn-secondary text-center">注册新账户</a>
+                <a href="index.html" class="btn btn-ghost text-center">返回首页</a>
             </div>
         </div>
     </div>
 
     <!-- 忘记密码模态框 -->
-    <div id="forgotPasswordModal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full z-50">
-        <div class="relative top-20 mx-auto p-5 border w-11/12 md:w-1/2 lg:w-1/3 shadow-lg rounded-md bg-white">
-            <div class="mt-3">
-                <div class="flex justify-between items-center mb-4">
-                    <h3 class="text-lg font-medium text-gray-900">重置密码</h3>
-                    <button onclick="closeForgotPasswordModal()" class="text-gray-400 hover:text-gray-600">✕</button>
+    <div id="forgotPasswordModal" style="display: none; position: fixed; inset: 0; background-color: rgba(0, 0, 0, 0.5); z-index: 50; padding: 1rem;">
+        <div style="position: relative; top: 20%; margin: 0 auto; max-width: 400px;">
+            <div class="card" style="padding: 2rem;">
+                <div class="flex justify-between items-center" style="margin-bottom: 1.5rem;">
+                    <h3 style="font-size: 1.125rem; font-weight: 600;">重置密码</h3>
+                    <button onclick="closeForgotPasswordModal()" 
+                            style="background: none; border: none; color: var(--color-text-muted); cursor: pointer; font-size: 1.25rem;">✕</button>
                 </div>
-                <form id="forgotPasswordForm" class="space-y-4">
-                    <div>
-                        <label for="resetEmail" class="block text-sm font-medium text-gray-700">邮箱地址</label>
-                        <input type="email" id="resetEmail" required
-                               class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-black focus:border-black sm:text-sm"
-                               placeholder="请输入注册邮箱">
-                        <p class="mt-1 text-sm text-red-600 hidden" id="resetEmailError"></p>
+                <form id="forgotPasswordForm">
+                    <div class="form-group">
+                        <label for="resetEmail" class="form-label">邮箱地址</label>
+                        <input type="email" id="resetEmail" required class="form-input" placeholder="请输入注册邮箱">
+                        <p class="message-error" id="resetEmailError" style="display: none; margin-top: 0.5rem; font-size: 0.75rem;"></p>
                     </div>
-                    <div class="flex justify-end space-x-3">
-                        <button type="button" onclick="closeForgotPasswordModal()" class="px-4 py-2 border border-gray-300 rounded-md text-gray-700 hover:bg-gray-50">取消</button>
-                        <button type="submit" class="px-4 py-2 bg-black text-white rounded-md hover:bg-gray-800">发送重置邮件</button>
+                    <div class="flex justify-end" style="gap: 0.75rem;">
+                        <button type="button" onclick="closeForgotPasswordModal()" class="btn btn-ghost">取消</button>
+                        <button type="submit" class="btn btn-primary">发送重置邮件</button>
                     </div>
                 </form>
             </div>
@@ -163,15 +134,23 @@
 
         // 显示忘记密码模态框
         function showForgotPasswordModal() {
-            document.getElementById('forgotPasswordModal').classList.remove('hidden');
+            document.getElementById('forgotPasswordModal').style.display = 'block';
         }
 
         // 关闭忘记密码模态框
         function closeForgotPasswordModal() {
-            document.getElementById('forgotPasswordModal').classList.add('hidden');
+            document.getElementById('forgotPasswordModal').style.display = 'none';
             document.getElementById('forgotPasswordForm').reset();
-            document.getElementById('resetEmailError').classList.add('hidden');
+            document.getElementById('resetEmailError').style.display = 'none';
         }
+
+        // 密码显示/隐藏切换
+        document.getElementById('togglePassword').addEventListener('click', function() {
+            const passwordInput = document.getElementById('password');
+            const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
+            passwordInput.setAttribute('type', type);
+            this.textContent = type === 'password' ? '👁️' : '🙈';
+        });
     </script>
 </body>
 </html>
