修复登录和个人中心页面问题

--- a/login.html
+++ b/login.html
@@ -120,9 +120,9 @@
     </div>
 
     <!-- 加载认证逻辑和导航逻辑 -->
-    <script src="navigation.js"></script>
-    <script src="main.js"></script>
-    <script src="auth.js"></script>
+    <script src="navigation.js?v=20241219"></script>
+    <script src="main.js?v=20241219"></script>
+    <script src="auth.js?v=20241219"></script>
 
     <script>
         // 页面初始化
