--- a/projects.html
+++ b/projects.html
@@ -304,9 +304,9 @@
     </div>
 
     <!-- Scripts -->
-    <script src="navigation.js"></script>
-    <script src="main.js"></script>
-    <script src="project_management.js"></script>
+    <script src="navigation.js?v=20241219"></script>
+    <script src="main.js?v=20241219"></script>
+    <script src="project_management.js?v=20241219"></script>
 
     <script>
         // 页面初始化
