重大重构：融合项目详情页和话题讨论页为统一的discussion.html页面，提供一致的用户体验和完整功能整合

--- a/projects.html
+++ b/projects.html
@@ -220,7 +220,7 @@
                         <div class="flex justify-between items-start" style="margin-bottom: 1rem;">
                             <div style="flex: 1;">
                                 <h3 style="font-size: 1.125rem; font-weight: 600; margin-bottom: 0.5rem;">
-                                    <a href="project_detail.html?id=1" style="color: var(--color-text-primary);">基于深度学习的医疗影像诊断系统</a>
+                                    <a href="discussion.html?id=1" style="color: var(--color-text-primary);">基于深度学习的医疗影像诊断系统</a>
                                 </h3>
                                 <p style="color: var(--color-text-secondary); font-size: 0.875rem; line-height: 1.5; margin-bottom: 1rem;">
                                     开发了一套基于深度学习的医疗影像自动诊断系统，能够准确识别肺部结节、骨折等多种疾病。目前已完成算法验证，寻求产业化合作伙伴。
@@ -244,7 +244,7 @@
                                 <button class="btn btn-ghost btn-sm">👎 否定 (3)</button>
                                 <button class="btn btn-ghost btn-sm">💬 讨论 (8)</button>
                             </div>
-                            <button class="btn btn-primary btn-sm" onclick="window.location.href='project_detail.html?id=1'">了解详情</button>
+                                                            <button class="btn btn-primary btn-sm" onclick="window.location.href='discussion.html?id=1'">了解详情</button>
                         </div>
                     </div>
 
@@ -252,7 +252,7 @@
                         <div class="flex justify-between items-start" style="margin-bottom: 1rem;">
                             <div style="flex: 1;">
                                 <h3 style="font-size: 1.125rem; font-weight: 600; margin-bottom: 0.5rem;">
-                                    <a href="project_detail.html?id=2" style="color: var(--color-text-primary);">新型锂电池材料产业化项目</a>
+                                    <a href="discussion.html?id=2" style="color: var(--color-text-primary);">新型锂电池材料产业化项目</a>
                                 </h3>
                                 <p style="color: var(--color-text-secondary); font-size: 0.875rem; line-height: 1.5; margin-bottom: 1rem;">
                                     研发出新型硅纳米线锂电池负极材料，能量密度提升40%，循环寿命超过2000次。已获得多项专利，寻求产业化投资和生产合作。
@@ -276,7 +276,7 @@
                                 <button class="btn btn-ghost btn-sm">👎 否定 (2)</button>
                                 <button class="btn btn-ghost btn-sm">💬 讨论 (15)</button>
                             </div>
-                            <button class="btn btn-primary btn-sm" onclick="window.location.href='project_detail.html?id=2'">了解详情</button>
+                                                            <button class="btn btn-primary btn-sm" onclick="window.location.href='discussion.html?id=2'">了解详情</button>
                         </div>
                     </div>
 
@@ -284,7 +284,7 @@
                         <div class="flex justify-between items-start" style="margin-bottom: 1rem;">
                             <div style="flex: 1;">
                                 <h3 style="font-size: 1.125rem; font-weight: 600; margin-bottom: 0.5rem;">
-                                    <a href="project_detail.html?id=3" style="color: var(--color-text-primary);">智能农业监测系统</a>
+                                    <a href="discussion.html?id=3" style="color: var(--color-text-primary);">智能农业监测系统</a>
                                 </h3>
                                 <p style="color: var(--color-text-secondary); font-size: 0.875rem; line-height: 1.5; margin-bottom: 1rem;">
                                     基于物联网和人工智能技术的智能农业监测系统，可实时监测土壤、气候、作物生长状态，提供精准农业解决方案。
@@ -308,7 +308,7 @@
                                 <button class="btn btn-ghost btn-sm">👎 否定 (1)</button>
                                 <button class="btn btn-ghost btn-sm">💬 讨论 (6)</button>
                      </div>
-                            <button class="btn btn-primary btn-sm" onclick="window.location.href='project_detail.html?id=3'">了解详情</button>
+                                                            <button class="btn btn-primary btn-sm" onclick="window.location.href='discussion.html?id=3'">了解详情</button>
                           </div>
                       </div>
                 </div>
