--- a/create_topic.html
+++ b/create_topic.html
@@ -12,7 +12,7 @@
         <div class="nav-container">
             <div class="nav-brand">
                 <a href="index.html">Otherwise<span style="margin-left: 0.5rem; font-size: 0.875rem; color: var(--color-text-secondary);">否则</span></a>
-            </div>
+                </div>
             <div class="nav-links">
                 <a href="index.html" class="nav-link">首页</a>
                 <a href="projects.html" class="nav-link">项目话题</a>
@@ -39,14 +39,14 @@
                         </button>
                     </div>
                 </div>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
 
     <div class="container" style="margin-top: 2rem;">
         <div class="grid grid-cols-3" style="gap: 2rem; align-items: start;">
             <!-- 左侧：发布指南 -->
-            <div>
+                <div>
                 <div class="card" style="margin-bottom: 1.5rem;">
                     <h3 style="font-size: 1.125rem; font-weight: 600; margin-bottom: 1rem;">📋 发布指南</h3>
                     <div style="display: flex; flex-direction: column; gap: 0.75rem; font-size: 0.875rem; color: var(--color-text-secondary);">
@@ -472,7 +472,7 @@
             localStorage.removeItem('topicDraft');
             
             alert('话题发布成功！');
-            window.location.href = `topic_discussion.html?id=${formData.id}`;
+            window.location.href = `discussion.html?id=${formData.id}`;
         });
         
         // 工具函数
